Change userName to username
